Early out folks who don't need FB login

--- a/index.html
+++ b/index.html
@@ -7,6 +7,24 @@
 </head>
 <body>
 <h1>Help!</h1>
-<div>Keep calm.</div>
+<p>Keep calm. We're going to get through this together. First, what platform is your app on?</p>
+<ul>
+<li><a href="#website">App? I have a website</a>
+<li><a href="#facebook_canvas">My app is on the Facebook Canvas</a>
+<li><a href="#ios">My app is on iOS</a>
+<li><a href="#android">My app is on Android</a>
+<li><a href="#unity">My app is on iOS or Android and is made with Unity</a>
+</ul>
+<a name="website"></a>
+<h2>App? I have a website.</h2>
+  <p>Websites are cool too. Before we get too far into this though, let's make sure you need Facebook Login. Are you just trying to do any of the following?
+  <ul>
+    <li>I want people to like my website
+    <li>I want people to like my Facebook page from my website
+    <li>I have articles, pictures, videos, games, etc. on my website that I want people to like
+    <li>I want to use Facebook comments
+    <li>I want to make it easy for users to share my content on Facebook
+  </ul>
+  If you don't want anything beyond that list, then great news: You don't need Facebook login! What you're looking for is the relevant Facebook Social Plugin, and possibly a bit of Open Graph magic. Don't worry, we can help with that too. <a href="#later_maybe">Continue your adventure.</a>
 </body>
 </html>
